Wire-In listeners consistently
Closes #2752